Assignment3/kubernetes/Network-Policy/backend-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-backend
  namespace: backend
spec:
  podSelector:
    matchLabels:
      app: devops-backend
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: nginxns
