Assignment3/kubernetes/Network-Policy/frontend-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-frontend
  namespace: frontend
spec:
  podSelector:
    matchLabels:
      app: devops-frontend
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: nginxns
