Assignment3/kubernetes/Network-Policy/mongo-network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-mongo-backend
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: mongo
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          team: backend
